<resources>
    <string name="app_name">Halawyat</string>
    <string name="kw">Kuwait</string>
    <string name="tb1">Exclusive\n
We have the best desserts</string>
    <string name="tb2">Delivery\n service to your door</string>
    <string name="tb3">Track \nyour order directly on the map</string>
    <string name="logiin">Login</string>
    <string name="phone">Phone Number</string>
    <string name="Password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="skip">Skip</string>
    <string name="ar">AR</string>
    <string name="username">UserName</string>
    <string name="Email">Email</string>
    <string name="phonerequired">Please Enter Phone number</string>
    <string name="phone_number">Phone Number must be 10 digits</string>
    <string name="passwordreqiured">Password Required</string>
    <string name="passwordmust">Password  must be more than 6 digits</string>
    <string name="userreuired">The username is required </string>
    <string name="usermust">the Username must be maore than 3 characters</string>
    <string name="emalireuired">The Email is Required</string>
    <string name="emailsmustbe">The Email Must be As ahmed@gmail.com</string>
    <string name="confirmcode">Verify Code</string>
    <string name="entercode">Enter The Sent Code</string>
    <string name="Thecode">The Code</string>
    <string name="Send">Send</string>
    <string name="Restpass">Rest Password</string>
    <string name="Etnteremail">Enter Your Email</string>
    <string name="choosearea">Choose Area</string>
    <string name="serachshop">Search Shops</string>
    <string name="search">Search with area name</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit Now</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Orders</string>
    <string name="menu_slideshow">My Profile</string>
    <string name="menu_tools">Contact us</string>
    <string name="menu_share">Terms and Conditions</string>
    <string name="menu_send">Common questions</string>
    <string name="menu_home1">Logout</string>
    <string name="menu_home2">About Us</string>
    <string name="last">Best seller</string>
    <string name="Di">KWD</string>
    <string name="addcart">Add to cart</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="changelang">Change Language</string>
    <string name="plaselogin">You must Login / Register </string>
    <string name="mustlogin">You must be login / Register \n Would you like to Login / Register now ?  </string>
    <string name="ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="totalprice">Total Price</string>
    <string name="Follow">Follow</string>
    <string name="MakeOrder">Maker Order</string>
    <string name="plaseaddres">Please Choose Delivery address and Time</string>
    <string name="times">Choose Time</string>
    <string name="ChangePassword">Change Password</string>
    <string name="ChooseAddress">Choose Address</string>
    <string name="title_activity_map_page">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCK2uUN6wqM0uAcGTXuoJfiVu1wcrTfQeM</string>
    <string name="current">Your current Location</string>
    <string name="EnbleGPs">Enable Location</string>
    <string name="GPSSetting">Your Locations Settings is set to OFF.\n Please Enable Location to use this app</string>
    <string name="OrderNum">Order NO.</string>
    <string name="pending">Pending</string>
    <string name="cancleled">Cancelled</string>
    <string name="Completed">Completed</string>
    <string name="reday">Ready</string>
    <string name="Accepted">Accepted</string>
    <string name="Setting">Location Settings</string>
    <string name="ToatalPrice">Total Price :    </string>
    <string name="subtoatal">Sub Total :     </string>
    <string name="shipped">Shipping   :    </string>
    <string name="Orderdetails">Order Details</string>
    <string name="quantity">quantity</string>
    <string name="Shopname">Shop Name</string>
    <string name="ordershippedto">Order address : </string>
    <string name="Tilte">Title</string>
    <string name="problrm">Problem</string>
    <string name="Notifiactions">Notifications</string>
</resources>
