<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/roundedborder"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/d75"
        android:layout_height="@dimen/d75"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/llog"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llog"
        android:text="@string/plaselogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="@dimen/d2"
        android:textSize="18sp"
        android:id="@+id/title"
        android:textColor="@color/colorAccent"
        />
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:id="@+id/dexc"
        android:text="@string/mustlogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="@dimen/d2"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/text_dark_grey"
        />
    <Button
        android:layout_width="@dimen/d120"
        android:layout_height="@dimen/d40"
        android:gravity="center"
        android:layout_below="@id/dexc"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white_color"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:id="@+id/t_ok"
        android:text="@string/ok"
        android:layout_alignParentLeft="true" />
    <Button
        android:layout_width="@dimen/d120"
        android:layout_height="@dimen/d40"
        android:gravity="center"
        android:layout_below="@id/dexc"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/caclel"
        android:background="@drawable/roundedborder"
        android:textColor="@color/text_dark_grey"
        android:textSize="15sp"
        android:text="@string/Cancel"
        android:layout_alignParentRight="true" />
</RelativeLayout>