<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_clr"
    tools:context=".ui.Login">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/d50"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tilte"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="50dp"
                android:src="@drawable/logo" />
        </RelativeLayout>
    </RelativeLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginRight="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/phone"
            android:textSize="13sp"
            android:drawablePadding="20dp"
            android:inputType="phone"
            android:singleLine="true"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"/>
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/Password"
            android:textSize="13sp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:inputType="textPassword"
            android:textColorHighlight="@color/colorPrimary"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/T_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:text="@string/forgetPassword"
        android:textColor="@color/text_dark_grey"
        android:textSize="17sp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/T_forgetpass"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/logiin"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/bt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/T_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />
</RelativeLayout>