<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".ui.Forgetpassword">

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:src="@drawable/left" />

    <TextView
        android:id="@+id/bt_bacdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/Restpass"
        android:textColor="@color/text_dark_grey"
        android:textSize="16sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/logod"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/til"
        android:layout_centerHorizontal="true"
        android:layout_margin="35dp"
        android:src="@drawable/mail_circle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/ted"
        android:layout_above="@id/ephone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/text_grey"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/til"
        android:layout_above="@id/ted"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/text_dark_grey"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Etnteremail"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:background="@drawable/roundedborder"
        android:id="@+id/ephone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/et_phone"
            android:textColor="@color/text_dark_grey"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="example@example.com"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@null"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ephone"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/layout_bg"
        android:text="@string/Send"
        android:textColor="@color/white_color"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>