<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_clr"
    tools:context=".ui.Forgetpassword">

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:src="@drawable/left" />

    <TextView
        android:id="@+id/bt_bacdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/Restpass"
        android:textColor="@color/text_dark_grey"
        android:textSize="16sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/logod"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/bt_back"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:src="@drawable/mail_circle" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerInParent="true"
        android:id="@+id/ephone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:id="@+id/et_phone"
            android:textColor="@color/text_dark_grey"
            android:textSize="16sp"
            android:singleLine="true"
            android:background="@drawable/roundedborder"
            android:hint="@string/Password"
            android:layout_margin="5dp"
            android:gravity="center"
            />


    </RelativeLayout>
    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ephone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:background="@drawable/layout_bg"
        android:text="@string/Send"
        android:textColor="@color/white_color"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>